--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 pyTelegramBotAPI==4.14.0
+redis==5.0.1
 requests==2.31.0
 telebot==0.0.5
 urllib3==2.0.6
