--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,5 +14,5 @@ services:
     image: redis:7
     container_name: redis_app
     command: --port 5370
-    ports:
-      - 5370:5370
+    expose:
+      - 5370
